<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="6dp"
    android:layout_margin="6dp"
    android:background="#fff"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/type"
                android:textColor="#ff408cff"
                android:padding="5dp"
                android:minLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:id="@+id/note"
                android:textColor="#ff408cff"
                android:padding="5dp"
                android:minLines="1"
                android:layout_below="@+id/type"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:id="@+id/amount"
                android:textColor="#FFC640"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:id="@+id/date"
                android:textColor="#ffb640ff"
                android:padding="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>