<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/back_des"
                android:id="@+id/update_head"
                android:text="@string/update_delete"
                android:textColor="@android:color/white"
                android:padding="10dp"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:layout_margin="10dp"
                        android:text="@string/name"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_name_update"
                        android:maxLines="1"
                        android:inputType="textCapSentences"
                        android:layout_margin="10dp" />

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:layout_margin="10dp"
                        android:text="@string/amount"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:inputType="number"
                        android:maxLines="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_amount_update"
                        android:layout_margin="10dp" />

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:layout_margin="10dp"
                        android:text="@string/note"/>

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/edit_note_update"
                        android:inputType="textCapSentences"
                        android:maxLines="1"
                        android:layout_margin="10dp" />

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_margin="10dp"
                        android:background="@drawable/ed_design"
                        android:text="@string/delete"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:id="@+id/btnDelete"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/ed_design"
                        android:text="@string/update"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@android:color/white"
                        android:id="@+id/btnUpdate" />
                </RelativeLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>